feat: add structure

--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Lisa Semenova</h1>
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href=""></a>
+                </li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </ul>ß
+        </nav>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
